--- a/src/assets/_article.scss
+++ b/src/assets/_article.scss
@@ -32,7 +32,7 @@ img, video {
 }
 
 a {
-  color: $fg-link;
+  color: var(--fg-link);
   text-decoration: none;
   &:hover {
     text-decoration: underline;
@@ -68,12 +68,12 @@ a:not([href^="http"]) {
 
 
 small {
-  color: $fg-faded;
+  color: var(--fg-faded);
 }
 
 hr {
   border: none;
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid var(--border-color);;
 }
 
 details summary {
@@ -91,23 +91,7 @@ summary h6 {
 }
 
 details {
-  margin: $padding-flow 0;
-}
-
-.page-title {
-  border-bottom: 1px solid $border-color;
-  margin-bottom: $padding-containers;
-  display: flex;
-  align-content: space-between;
-  align-items: baseline;
-
-  h1 {
-    margin-top: 1em;
-    padding-bottom: 0;
-    font-size: 2em;
-    border-bottom: none;
-    flex-grow: 1;
-  }
+  margin: $padding-sm 0;
 }
 
 a.header-anchor {
@@ -116,7 +100,7 @@ a.header-anchor {
   &:after {
     padding: 0 0.5em;
     content: '#';
-    color: $fg-faded;
+    color: var(--fg-faded);
     opacity: 0.25;
     transition: opacity $transition-time;
   }
@@ -134,7 +118,7 @@ h6 {font-size: 0.75em;}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-headers;
-  color: $fg-strong;
+  color: var(--fg-strong);
   &:hover a.header-anchor, &.destination a.header-anchor {
     opacity: 1;
   }
@@ -145,25 +129,25 @@ h1, h2, h3, h4, h5, h6 {
 
 .destination {
   transition: all $transition-time cubic-bezier(0, 3, 1, -3);
-  text-shadow: 0 0 $padding-containers-small $fg-strong, 0 0 $padding-containers $logo-color;
+  text-shadow: 0 0 $padding-sm var(--fg-strong), 0 0 $padding-md $logo-color;
 }
 
 h1 {
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid var(--border-color);;
   padding-bottom: 10px;
   overflow: hidden;
 }
 
 strong {
-  color: $fg-strong;
+  color: var(--fg-strong);
 }
 
 blockquote {
   display: flow-root;
   font-style: italic;
-  background: $bg-inset;
+  background: var(--bg-inset);
   border-radius: $border-radius;
-  padding: 0 $padding-flow;
+  padding: 0 $padding-sm;
   margin-left: 0;
 }
 
@@ -173,9 +157,9 @@ kbd {
   font-family: $font-family-code;
   font-size: $font-size-code;
   padding: 0 0.5em;
-  background: $bg-inset;
+  background: var(--bg-inset);
   border-radius: 4px;
   font-weight: bold;
-  border: 1px solid $border-color;
-  box-shadow: 0 2px 0 -1px $bg-overlay, 0 2px 0 $border-color;
+  border: 1px solid var(--border-color);;
+  box-shadow: 0 2px 0 -1px var(--bg-overlay), 0 2px 0 var(--border-color);;
 }
