Responsive layout for mobile and tablet sized devices

--- a/src/assets/_alert.scss
+++ b/src/assets/_alert.scss
@@ -3,8 +3,8 @@
 .alert {
   display: flow-root;
   border-radius: $border-radius;
-  padding: 0 $padding-md;
-  margin-bottom: $padding-md;
+  padding: 0 var(--padding-md);
+  margin-bottom: var(--padding-md);
   &.type-info {
     background: $bg-info;
   }
