--- a/src/assets/_constants.scss
+++ b/src/assets/_constants.scss
@@ -27,9 +27,15 @@ $logo-color: #00cacb;
 
 $border-radius: 4px;
 
-$padding-lg: 32px;
-$padding-md: 16px;
-$padding-sm: 8px;
+$padding-xl-desktop: 64px;
+$padding-lg-desktop: 32px;
+$padding-md-desktop: 16px;
+$padding-sm-desktop: 8px;
+
+$padding-xl-mobile: 32px;
+$padding-lg-mobile: 16px;
+$padding-md-mobile: 8px;
+$padding-sm-mobile: 4px;
 
 $font-size: 12pt;
 $font-size-logo: 14pt;
