--- a/src/assets/_tables.scss
+++ b/src/assets/_tables.scss
@@ -2,11 +2,11 @@
 
 table {
   border-collapse: collapse;
-  margin-bottom: $padding-sm;
+  margin-bottom: var(--padding-sm);
   width: 100%;
 
   td, th {
-    padding: $padding-sm;
+    padding: var(--padding-sm);
     border: 1px solid var(--border-color);;
     vertical-align: top;
 
