--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -198,9 +198,9 @@ body {
   }
 
   .results-toggle-child-pages {
-    padding: var(--padding-lg);
+    padding: 0 var(--padding-sm);
     display: flex;
-    align-items: left;
+    align-items: center;
   }
 
   .link-list {
