--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -269,7 +269,7 @@ body {
 }
 
 .page-content-main {
-  padding: 0  var(--padding-xl);
+  padding: 0 var(--padding-lg);
   grid-area: main;
   display: flex;
   flex-direction: column;
